--- a/css/reset.css
+++ b/css/reset.css
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	font-family: var(--font-principal);
+	overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
