--- a/css/base.css
+++ b/css/base.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+.mobiloDisplay{display: none;}
+
 /*---- Botões CTA ---*/
 .button{
     border: none;
@@ -47,6 +49,7 @@ section {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 .fundo-laranja{
     background-color: var(--cor-secundaria);
@@ -126,13 +129,67 @@ nav a:hover{
     color: var(--cor-secundaria);
 }
 
+.mobile-menu{
+    display: none;
+}
+.mobile-menu-icon{
+    display: none;
+}
+
+/* Estilos para dispositivos móveis */
+@media (max-width: 768px) {
+    .menu {
+        display: none; /* Oculta o menu principal em telas menores */
+    }
+
+    header{
+        height: 150px;
+    }
+
+    .mobile-menu-icon {
+        display: block;
+        width: 30px;
+        height: 20px;
+        cursor: pointer;
+    }
+
+    .mobile-menu-icon img{
+        width: 30px;
+    }
+
+    .mobile-menu {
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0px;
+        margin: 5px;
+        height: 100px;
+    }
+
+    .mobile-menu a {
+        display: block;
+        margin-bottom: 10px;
+    }
+}
+
+/* Exibir o menu móvel quando o ícone é clicado */
+.mobile-menu-icon.active {
+    margin-right: 15px;
+}
+
+.mobile-menu-icon.active + .mobile-menu {
+    display: flex;
+}
+
 /*---- Home ---*/
 .home {
     background-image: url(/assets/imgs/home.png);
     background-size: cover;
+    justify-content: center;
     padding: 0px;
     width: 100%;
     height: 100vh;
+    margin: 0;
 }
 .infos-home{
     display: flex; 
@@ -158,6 +215,10 @@ nav a:hover{
     margin-top: 12px;
     width: 70%;
 }
+.texto-home span{
+    display: none;
+}
+
 .filter{
     background-color: #0000008a;
     position: absolute;
@@ -360,7 +421,7 @@ footer{
 
 }
 .footer-menu img{
-    width: 134px;
+    width: 135px;
 }
 .footer-menu nav{
     margin-left: 40px;
