--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,5 @@
 @import "./componentes.css";
 @import "./base.css";
 @import "./variaveis.css";
+@import "./responsividade/mobile.css";
+@import "./responsividade/tablet.css"
