--- a/css/componentes.css
+++ b/css/componentes.css
@@ -20,7 +20,12 @@
   height: 400px;
   margin-bottom: 20px;
 }
-  
+
+.slider-container{
+  width: 100%;
+  margin-top: 20px;
+}
+
 .sobre img {
   width: 100%;
   height: 100%;
